@@ -129,10 +129,14 @@ Section "!Minimal install" SEC01
   File "..\..\..\local\locale\da\LC_MESSAGES\pioneers.mo"
   SetOutPath "$INSTDIR\locale\de\LC_MESSAGES"
   File "..\..\..\local\locale\de\LC_MESSAGES\pioneers.mo"
+  SetOutPath "$INSTDIR\locale\en_GB\LC_MESSAGES"
+  File "..\..\..\local\locale\en_GB\LC_MESSAGES\pioneers.mo"
   SetOutPath "$INSTDIR\locale\es\LC_MESSAGES"
   File "..\..\..\local\locale\es\LC_MESSAGES\pioneers.mo"
   SetOutPath "$INSTDIR\locale\fr\LC_MESSAGES"
   File "..\..\..\local\locale\fr\LC_MESSAGES\pioneers.mo"
+  SetOutPath "$INSTDIR\locale\gl\LC_MESSAGES"
+  File "..\..\..\local\locale\gl\LC_MESSAGES\pioneers.mo"
   SetOutPath "$INSTDIR\locale\hu\LC_MESSAGES"
   File "..\..\..\local\locale\hu\LC_MESSAGES\pioneers.mo"
   SetOutPath "$INSTDIR\locale\it\LC_MESSAGES"
@@ -454,8 +458,10 @@ Section Uninstall
   Delete "$INSTDIR\locale\ja\LC_MESSAGES\pioneers.mo"
   Delete "$INSTDIR\locale\it\LC_MESSAGES\pioneers.mo"
   Delete "$INSTDIR\locale\hu\LC_MESSAGES\pioneers.mo"
+  Delete "$INSTDIR\locale\gl\LC_MESSAGES\pioneers.mo"
   Delete "$INSTDIR\locale\fr\LC_MESSAGES\pioneers.mo"
   Delete "$INSTDIR\locale\es\LC_MESSAGES\pioneers.mo"
+  Delete "$INSTDIR\locale\en_GB\LC_MESSAGES\pioneers.mo"
   Delete "$INSTDIR\locale\de\LC_MESSAGES\pioneers.mo"
   Delete "$INSTDIR\locale\da\LC_MESSAGES\pioneers.mo"
   Delete "$INSTDIR\locale\cs\LC_MESSAGES\pioneers.mo"
@@ -515,10 +521,14 @@ Section Uninstall
   RMDir "$INSTDIR\locale\it"
   RMDir "$INSTDIR\locale\hu\LC_MESSAGES"
   RMDir "$INSTDIR\locale\hu"
+  RMDir "$INSTDIR\locale\gl\LC_MESSAGES"
+  RMDir "$INSTDIR\locale\gl"
   RMDir "$INSTDIR\locale\fr\LC_MESSAGES"
   RMDir "$INSTDIR\locale\fr"
   RMDir "$INSTDIR\locale\es\LC_MESSAGES"
   RMDir "$INSTDIR\locale\es"
+  RMDir "$INSTDIR\locale\en_GB\LC_MESSAGES"
+  RMDir "$INSTDIR\locale\en_GB"
   RMDir "$INSTDIR\locale\de\LC_MESSAGES"
   RMDir "$INSTDIR\locale\de"
   RMDir "$INSTDIR\locale\da\LC_MESSAGES"
